# mcp-aiops

./: Makefile  README.md  docker-compose-cli.yaml  docker-compose.yaml
clients/cli-chatbot/: .env-examples  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  servers_config.json-example
clients/cli-chatbot/src/: chat_session.py
clients/cli-chatbot/src/model/: llm_client.py
clients/cli-chatbot/src/model/llm_clients/: anthropic_client.py  base_llm_client.py  gemini_client.py  ollama_client.py
clients/cli-chatbot/src/service/: server.py
clients/ui-streamlit/: Dockerfile  README.md  app.py  servers_config.json-example
clients/ui-streamlit/apps/: mcp_playground.py
clients/ui-streamlit/services/: chat_service.py
clients/ui-streamlit/utils/: ai_prompts.py
common/: docker-compose-cli.yaml  docs.md
servers/mcp-datadog/: config.py  main.py
servers/mcp-datadog/modules/: __init__.py  monitor.py
servers/mcp-duckduckgo/: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  tools.py  utils_json.py
servers/mcp-user-db/: README.md  config.py  server.py  tools.py
